# protoHuboGUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gait_log.yaml  params_2015-08-27T07-01-0400.yaml  params_2015-08-29T16-11-0400.yaml  params_2015-09-01T15-35-0400.yaml  params_2015-09-02T02-06-0400.yaml  params_2015-09-03T01-51-0400.yaml  params_2015-09-07T12-50-0400.yaml  params_2015-09-08T20-44-0400.yaml  params_2015-09-08T21-24-0400.yaml  params_2015-09-11T16-24-0400.yaml  params_2015-09-12T00-11-0400.yaml  params_2015-09-12T00-48-0400.yaml  params_2015-09-12T01-14-0400.yaml  params_2015-09-12T03-02-0400.yaml  params_2015-09-12T11-29-0400.yaml  params_2015-09-12T12-21-0400.yaml  params_2015-09-12T13-07-0400.yaml  params_2015-09-12T13-19-0400.yaml  params_2015-09-12T13-39-0400.yaml  params_2015-09-12T13-44-0400.yaml  params_2015-09-12T15-21-0400.yaml  params_2015-09-14T02-56-0400.yaml  params_2015-09-15T00-40-0400.yaml
apps/: config.h.in  hubo-ik-gui.cpp  hubo-quasi-walk.cpp  hubo-replay.cpp  hubo-sim.cpp  hubo-simple-gait.cpp  hubo-walk-solver.cpp
cmake/: FindEIGEN3.cmake
hubo/: ArmIK.cpp  ArmIK.hpp  CMakeLists.txt  DrcModel.cpp  DrcModel.hpp  LegIK.cpp  LegIK.hpp  RelaxedPosture.cpp  RelaxedPosture.hpp  config.hpp.in  utils.hpp
